--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "require": {
     "vlucas/phpdotenv": "^2.4",
     "psr/container": "*",
-    "league/container": "*"
+    "league/container": "*",
+    "deflou/compares": "*"
   },
   "autoload": {
     "psr-4": {
