--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "vlucas/phpdotenv": "^2.4",
     "psr/container": "*",
     "league/container": "*",
-    "deflou/compares": "*"
+    "deflou/compares": "*",
+    "mongodb/mongodb": "*"
   },
   "autoload": {
     "psr-4": {
