mv sm outside of g5

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "psr/container": "*",
     "league/container": "*",
     "deflou/compares": "*",
-    "mongodb/mongodb": "*"
+    "mongodb/mongodb": "*",
+    "jeyroik/extas-m": "*"
   },
   "autoload": {
     "psr-4": {
